--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
   "author": "heartnetkung <heartnetkung@gmail.com>",
   "version": "1.0.1",
   "dependencies": {
-    "express": "^4.0.0"
+    "express": ">= 4.0.0"
   }
 }
